# vacancies_hh.ru

./: main.py  pyproject.toml
api/: base_api.py  hh_api.py
src/: base_storage.py  helpers.py  json_storage.py  vacancy.py
tests/: test_api.py  test_main.py  test_src.py
